MFH: Fixed bug #35447 (xml_parse_into_struct() chokes on the UTF-8 BOM) add test